--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,9 @@
-blinker==1.7.0
-cryptography==41.0.7
-dbus-python==1.3.2
-distro==1.9.0
-httplib2==0.20.4
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-markdown-it-py==3.0.0
-mdurl==0.1.2
-netifaces==0.11.0
-oauthlib==3.2.2
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-pyparsing==3.1.1
-python-apt==2.7.7+ubuntu4
-PyYAML==6.0.1
-rich==13.7.1
-setuptools==68.1.2
-six==1.16.0
-ssh-import-id==5.11
-typing_extensions==4.10.0
-ubuntu-pro-client==8001
-wadllib==1.3.6
-wheel==0.42.0
+blinker==1.9.0
+click==8.2.1
+Flask==3.1.1
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==25.0
+Werkzeug==3.1.3
